--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^2.2.4",
-    "ember-cli": "~4.0.1",
+    "ember-cli": "^4.1.1",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.8",
     "ember-cli-dependency-checker": "^3.2.0",
@@ -45,9 +45,8 @@
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
-    "ember-source": "~4.0.1",
+    "ember-source": "^4.1.0",
     "ember-template-lint": "^3.15.0",
-    "ember-welcome-page": "^6.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-ember": "^10.5.8",
