--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.8",
     "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-fastboot": "^3.2.0-beta.5",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-postcss": "^8.0.0",
@@ -64,6 +65,8 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
+    "prember": "^1.1.0",
+    "prember-middleware": "^0.1.0",
     "prettier": "^2.5.1",
     "qunit": "^2.17.2",
     "qunit-dom": "^2.0.0",
