--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "webpack": "^5.65.0"
   },
   "engines": {
-    "node": "14.* || >= 16"
+    "node": "12.* || 14.* || >= 16"
   },
   "ember": {
     "edition": "octane"
